Mention mailing list

--- a/README
+++ b/README
@@ -69,6 +69,11 @@ You are very welcome to help the developement of arbtt. You can find the
 latest source at the darcs repository at
   http://darcs.nomeata.de/arbtt
 
+User and Developer discussion happens on the arbtt mailing list:
+  arbtt@lists.nomeata.de
+To subscribe to the list, visit:
+  http://lists.nomeata.de/mailman/listinfo/arbtt
+
 Some of my plans or ideas include:
 
  * A graphical viewer that allows you to expore the tags in an appealing,
