Link to git mirrors and issue tracker

--- a/README
+++ b/README
@@ -69,10 +69,20 @@ You are very welcome to help the developement of arbtt. You can find the
 latest source at the darcs repository at
   http://darcs.nomeata.de/arbtt
 
+Git mirrors are available at
+  http://git.nomeata.de/?p=darcs-mirror-arbtt.git
+  https://github.com/nomeata/darcs-mirror-arbtt
+  https://bitbucket.org/nomeata/arbtt
+
 User and Developer discussion happens on the arbtt mailing list:
   arbtt@lists.nomeata.de
 To subscribe to the list, visit:
   http://lists.nomeata.de/mailman/listinfo/arbtt
+
+The issue tracker is hosted on bitbucket:
+  https://bitbucket.org/nomeata/arbtt/issues
+Why Bitbucket and not GitHub? Why not, and we need diversitiy even in the
+cloud! (Don’t worry, you can use your GitHub account there.)
 
 Some of my plans or ideas include:
 
